add future work and resources tab

--- a/src/app/pages/conclusion/conclusion.component.html
+++ b/src/app/pages/conclusion/conclusion.component.html
@@ -34,6 +34,57 @@
         </div>
         <div class="image-column">
           <img src="assets/images/conclusion/elieen-collings-hog.gif" alt="Elieen Collins">
+          <!-- <img src="assets/images/conclusion/factory.webp" alt="Elieen Collins"> -->
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+  <ng-template>
+    <div class="slide-content">
+      <div class="split-slide">
+        <div class="text-column">
+          <h1>Future Work</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis facere impedit iusto? Ipsa dolores quam dolore iure blanditiis provident saepe fuga distinctio doloremque est quas ex ab, magni, necessitatibus eveniet!
+
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui sint enim ducimus asperiores error quo optio ad earum facere atque. Odio suscipit voluptatibus culpa id, nisi dolorum illum corrupti mollitia.
+          
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus rem magnam, iste, reiciendis voluptates quas consectetur facilis recusandae soluta ea quod vel. Sequi architecto quaerat a praesentium quis doloremque perspiciatis!
+
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis in pariatur voluptate, deserunt perspiciatis esse necessitatibus expedita. Provident iste voluptatem in. Dolorem ullam iste libero repellendus odit qui deleniti beatae!
+          </p>
+        
+          <h1>Resources</h1>
+          <div class="resource-buttons">
+            <a href="https://github.com/leonprietobailo/msc-cv-thesis" target="_blank" class="cv-button">
+              <img src="assets/images/conclusion/github-mark-white.svg" alt="GitHub logo" />
+              View on GitHub
+            </a>
+            <a href="assets/docs/thesis.pdf" target="_blank" class="cv-button">
+              <img src="assets/images/conclusion/pdf_icon.svg" alt="PDF icon" />
+              Download Thesis (PDF)
+            </a>
+          </div> 
+        </div>
+        <div class="text-column">
+          <!-- <h1>Resources</h1>
+          <div class="resource-buttons">
+            <a href="https://github.com/leonprietobailo/msc-cv-thesis" target="_blank" class="cv-button">
+              <img src="assets/images/conclusion/github-mark-white.svg" alt="GitHub logo" />
+              View on GitHub
+            </a>
+            <a href="assets/docs/thesis.pdf" target="_blank" class="cv-button">
+              <img src="assets/images/conclusion/pdf_icon.svg" alt="PDF icon" />
+              Download Thesis (PDF)
+            </a>
+          </div>           -->
+          <div class="image-column">
+            <!-- <img src="assets/images/conclusion/elieen-collings-hog.gif" alt="Elieen Collins"> -->
+            <img src="assets/images/conclusion/factory.webp" alt="Elieen Collins">
+          </div>
         </div>
       </div>
     </div>
