add remaining assets. add text contents for future work

--- a/src/app/pages/conclusion/conclusion.component.html
+++ b/src/app/pages/conclusion/conclusion.component.html
@@ -33,8 +33,9 @@
 
         </div>
         <div class="image-column">
-          <img src="assets/images/conclusion/elieen-collings-hog.gif" alt="Elieen Collins">
+          <!-- <img src="assets/images/conclusion/elieen-collings-hog.gif" alt="Elieen Collins"> -->
           <!-- <img src="assets/images/conclusion/factory.webp" alt="Elieen Collins"> -->
+             <img class="elieen-collins-gif" src="assets/images/conclusion/elieen-collings-hog-white.gif" alt="Elieen Collins">
         </div>
       </div>
     </div>
@@ -45,18 +46,11 @@
       <div class="split-slide">
         <div class="text-column">
           <h1>Future Work</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis facere impedit iusto? Ipsa dolores quam dolore iure blanditiis provident saepe fuga distinctio doloremque est quas ex ab, magni, necessitatibus eveniet!
+          <p>Future work should automate the <strong>YOLOv8-to-Keras conversion</strong> to improve <strong>scalability</strong> and reduce errors. Developing an <strong>end-to-end pipeline</strong> would streamline processing and support <strong>real-time deployment</strong> in industrial settings.</p>
 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui sint enim ducimus asperiores error quo optio ad earum facere atque. Odio suscipit voluptatibus culpa id, nisi dolorum illum corrupti mollitia.
+          <p>Efforts should also focus on <strong>optimising models for embedded hardware</strong> using techniques like <strong>quantisation</strong> and TensorRT. Incorporating <strong>multimodal data</strong> (e.g., thermal or acoustic signals) could further improve defect detection beyond standard RGB imagery.</p>
           
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus rem magnam, iste, reiciendis voluptates quas consectetur facilis recusandae soluta ea quod vel. Sequi architecto quaerat a praesentium quis doloremque perspiciatis!
 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis in pariatur voluptate, deserunt perspiciatis esse necessitatibus expedita. Provident iste voluptatem in. Dolorem ullam iste libero repellendus odit qui deleniti beatae!
-          </p>
-        
           <h1>Resources</h1>
           <div class="resource-buttons">
             <a href="https://github.com/leonprietobailo/msc-cv-thesis" target="_blank" class="cv-button">
@@ -67,7 +61,7 @@
               <img src="assets/images/conclusion/pdf_icon.svg" alt="PDF icon" />
               Download Thesis (PDF)
             </a>
-          </div> 
+          </div>
         </div>
         <div class="text-column">
           <!-- <h1>Resources</h1>
@@ -83,7 +77,7 @@
           </div>           -->
           <div class="image-column">
             <!-- <img src="assets/images/conclusion/elieen-collings-hog.gif" alt="Elieen Collins"> -->
-            <img src="assets/images/conclusion/factory.webp" alt="Elieen Collins">
+            <img class="factory-img" src="assets/images/conclusion/factory.webp" alt="Elieen Collins">
           </div>
         </div>
       </div>
